--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # TODO: add papers by configuration file
 base_url: "https://arxiv.paperswithcode.com/api/v0/papers/"
-user_name: "Vincentqyw"
+user_name: "zzj"
 repo_name: "cv-arxiv-daily"
 show_authors: True
 show_links: True
@@ -22,6 +22,8 @@ md_wechat_path: './docs/wechat.md'
 
 # keywords to search
 keywords:
+    "MVS":
+        filters: ["MVS", "Multi-View Stereo"]
     "SLAM": 
         filters: ["SLAM", "Visual Odometry"]
     "SFM":
@@ -36,4 +38,8 @@ keywords:
         filters: ["Image Matching", "Keypoint Matching", 
                   "Line Segment Detection", "Local Feature Matching"]
     "NeRF":
-        filters: ["NeRF"]
+        filters: ["NeRF", "neural rendering", "implicit fields"]
+    "NeuS":
+        filters: ["NeuS", "SDF", "neural rendering", "implicit fields"]
+    "GaussianSplatting":
+        filters: ["Gaussian", "Splatting"]
