更新关注的文献

--- a/config.yaml
+++ b/config.yaml
@@ -24,4 +24,4 @@ keywords:
   "GaussianSplatting":
     filters: [ "gaussian splatting", "3d gaussians", "3DGS", "point-based rendering" ]
   "Image Super-Resolution":
-    filters: [ "image super-resolution", "super-resolution", "image enhancement", "image restoration", "single image super-resolution", "multi-Frame super-resolution" "image inpainting", "implicit neural representation", "INR"]
+    filters: [ "image super-resolution", "super-resolution", "image enhancement", "image restoration", "single image super-resolution", "multi-Frame super-resolution", "image inpainting", "implicit neural representation", "INR"]
